--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <label for="biografia">Biografia:</label>
         <textarea id="biografia" name="biografia" rows="4" cols="30"></textarea><br><br>
         <input type="submit" id="Enviar">
-        <p>© 2025 Roteiro de Viagens</p>
+        <p>© 2025 Cadastro de Usuário</p>
     </body>
+
 </html>
